--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -1,7 +1,10 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 body{
     background-color: white;
-padding: 0;
-margin: 0;
+    padding: 0;
+    margin: 0;
 }
 section{
    background-color: white;
@@ -28,52 +31,82 @@ image{
 }
 
 /* Navbar section start */
-
 .container{
-width: 1280px;
-margin: 20 auto;
+    width: 1280px;
+    margin: 20  auto;
 }
 #navbar{
-    background-color: white;
+    background-color: #fff;
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
 .navbar_left_side{
+    
     display: flex;
     align-items: center;
-    gap: 15px;
+    gap: 12px;
 }
 .logo_icon_container{
-width: 56px;
-height: 56px;
-border-radius: 100%;
-background: rgb(red, green, blue);
-display: flex;
-align-items: center;
-justify-content: center;
-border-radius: 100%;
+    width: 56px;
+    height: 56px;
+    border-radius: 100%;
+    background-color: rgb(165, 61, 255);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
 }
 .logo_icon_container span{
-    font-family: poppings;
-    font-size: 24px;
-    font-weight: 500;
-    line-height: 56px;
-    letter-spacing: 0%;
-}
-.logo_name{
-    font-family: worksans;
-    color: rgb(red, green, blue);
-    font-weight: 600;
+    color: #fff
+    font-family: Work Sans;
     font-size: 32px;
+    font-weight: 600;
     line-height: 40px;
     letter-spacing: 0%;
+    text-align: left;
 }
-
+.logo_name{
+    color: rgb(19, 34, 56);
+    font-family: Work Sans;
+    font-size: 32px;
+    font-weight: 600;
+    line-height: 40px;
+    letter-spacing: 0%;
+    text-align: left;
+}
 .navbar_right_side{
+    
     display: flex;
     align-items: center;
     gap: 15px;
+}
+.navbar_link{
+    padding: 12px, 24px;
+}
+.navbar_link span{
+    color: rgb(51, 51, 51);
+    font-family: Work Sans;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 24px;
+    letter-spacing: 0%;
+    text-align: left;
+}
+.navbar_link_btn{
+    padding: 12px 24px;
+    border-radius: 4px;
+    background-color:rgb(165, 61, 255); 
+
+}
+.avbar_link_btn span{
+    color: rgb(255, 255, 255);
+    font-family: Work Sans;
+    font-size: 16px;
+    font-weight: 600;
+    line-height: 24px;
+    letter-spacing: 0%;
+    text-align: left;
 }
 /* Navbar section end */
 
